Bug 397457 - double clicking in ledger activates edit, but does not select transaction clicked on
Summary: double clicking in ledger activates edit, but does not select transaction cli...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-14 19:36 UTC by Jack
Modified: 2018-08-18 19:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2018-08-14 19:36:49 UTC
If I'm in the ledger, and have a transaction selected (such as if I just edited it) and I then double click on another transaction, it edits the selected transaction, not the one I clicked on.  I have to explicitly single click to select the new transaction, then double click to edit.  I suspect the double click is just activating the edit, but is not first assuring that the clicked transaction is selected.
Comment 1 Thomas Baumgart 2018-08-15 06:12:56 UTC
I could only reproduce this in the investment ledger not in the ledger showing a checking account. Can you confirm this?
Comment 2 Jack 2018-08-15 16:24:40 UTC
Very odd, but you are right.  I only happens in an investment ledger.  It works correctly in a checking ledger and a credit card ledger.
Comment 3 Thomas Baumgart 2018-08-17 19:06:17 UTC
Git commit b777b3b9cd28d556f52a2712186f41605b1e17b6 by Thomas Baumgart.
Committed on 17/08/2018 at 19:06.
Pushed by tbaumgart into branch 'master'.

Fix odd behavior of double-click in register

If a user is viewing the ledger, and a transaction is selected (such as
if it was just edited it) and then a double click is performed on
another transaction, it edits the previously selected transaction but
not the one that was clicked on. This only happens if the first
transaction is reconciled and a dialog pops up before the transaction is
edited. This change fixes the behavior.
FIXED-IN: 5.0.2

M  +1    -0    kmymoney/views/kgloballedgerview.cpp
M  +3    -1    kmymoney/widgets/register.cpp
M  +1    -1    kmymoney/widgets/register.h

https://commits.kde.org/kmymoney/b777b3b9cd28d556f52a2712186f41605b1e17b6
Comment 4 Jack 2018-08-17 21:25:19 UTC
I'm not sure how you figured out it was only reconciled transactions, independent of account type, but the fix is only partial.  If I click on am account (I have tried both investment and credit card) from the home page, and the last transaction is selected, and it is reconciled, if I double click a different (also reconciled transaction) it still opens the originally selected one.  After that, it now works correctly.  I thought I still had other examples, but can no longer reproduce them.
Comment 5 Thomas Baumgart 2018-08-18 08:30:29 UTC
Git commit cadea778eadd5fcf1552271a04e099fb084c4f60 by Thomas Baumgart.
Committed on 18/08/2018 at 08:30.
Pushed by tbaumgart into branch 'master'.

Fix odd behavior of double-click in register part II

Improve commit b777b3b9cd28d556f52a2712186f41605b1e17b6 such that the
odd behavior is also fixed in case the warning dialog is closed without
editing the transaction (Cancel is pressed).

M  +3    -1    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/cadea778eadd5fcf1552271a04e099fb084c4f60
Comment 6 Jack 2018-08-18 19:44:23 UTC
Thanks Thomas.  I can no longer find any examples of the wrong behavior.